# trrim-it

./: .prettierc  .prettierignore  docker-compose.yaml  package.json  turbo.json
apps/server/: .gitignore  Cargo.toml  Dockerfile  package.json
apps/server/src/: error.rs  lib.rs  main.rs  models.rs
apps/server/src/handlers/: health.rs  mod.rs  trim.rs
apps/server/src/middleware/: auth.rs
apps/server/src/middlewares/: auth.rs
apps/server/src/services/: fetcher.rs  mod.rs  storage.rs  trimmer.rs
apps/web/: package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/app/dashboard/: layout.tsx  loading.tsx  page.tsx
apps/web/app/waitlist/: page.tsx
apps/web/components/: BentoGrid.tsx  Footer.tsx  HeroSection.tsx  HowItWorks.tsx  InteractiveMockup.tsx  LandingPage.tsx  Navbar.tsx  PricingSection.tsx  ProblemSolution.tsx  SignInModal.tsx  WaitlistModal.tsx
apps/web/components/dashboard/: AIReelsBanner.tsx  BillingHistory.tsx  BuyCreditsModal.tsx  ClipsGrid.tsx  DashboardNav.tsx  DashboardShell.tsx  FeaturePreviewCard.tsx  LowBalanceBanner.tsx  PlanStatsRow.tsx  QuickTrim.tsx  QuickTrimWidget.tsx  RecentClipsTable.tsx  Sidebar.tsx  StatsCard.tsx  UsageChart.tsx  WaitlistForm.tsx
apps/web/components/landing/: AIReelsSection.tsx  Pricing.tsx
apps/web/components/ui/: Modal.tsx  Skeleton.tsx  StatusBadge.tsx  UsageMeter.tsx
apps/web/hooks/: usePlan.tsx  useWaitlist.ts
apps/web/lib/: admin.ts  auth-server.ts  copy.ts  dummy-auth.ts  mock-data.ts  mock-users.ts  plan-data.ts
apps/web/scripts/: generate-favicons.ts
(+17 files in other folders)
