[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
tower-http = "0.6.8"
reqwest = { version = "0.13", features = ["json"] }
dotenv = "0.15.0"
