[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"

tokio = { version = "1", features = ["full"] }

tower-http = "0.6.8"

reqwest = { version = "0.13", features = ["stream", "json"] }

dotenv = "0.15.0"

uuid = { version = "1", features = ["v4"] }

anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3" , features = ["env-filter"] }

futures-util = "0.3"

aws-sdk-s3 = "1"
aws-config = "1"

chrono = { version = "0.4", features = ["serde"] }
